--- a/docs/tutorials/repetition-codes.ipynb
+++ b/docs/tutorials/repetition-codes.ipynb
@@ -11,7 +11,7 @@
    },
    "source": [
     "# Repetition codes\n",
-    "*Usage estimate: less than 1 minute on ibm_brisbane (NOTE: This is an estimate only. Your runtime might vary.)*\n",
+    "*Usage estimate: less than 1 minute on a Heron device (NOTE: This is an estimate only. Your runtime might vary.)*\n",
     "\n",
     "## Background\n",
     "\n",
@@ -31,8 +31,8 @@
     "\n",
     "Before starting this tutorial, ensure that you have the following installed:\n",
     "\n",
-    "- Qiskit SDK 1.0 or later with visualization support (`pip install qiskit[visualization]`)\n",
-    "- Qiskit Runtime 0.22 or later (`pip install qiskit-ibm-runtime`)"
+    "- Qiskit SDK v2.0 or later with visualization support (`pip install qiskit[visualization]`)\n",
+    "- Qiskit Runtime v0.40 or later (`pip install qiskit-ibm-runtime`)"
    ]
   },
   {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "606dff18",
    "metadata": {},
    "outputs": [],
@@ -152,9 +152,9 @@
     "    circuit.cx(qreg_data[2], qreg_measure[1])\n",
     "    circuit.barrier(*qreg_data, *qreg_measure)\n",
     "    circuit.measure(qreg_measure, creg_measure)\n",
-    "    with circuit.if_test((creg_syndrome[0], 1)):\n",
+    "    with circuit.if_test((creg_measure[0], 1)):\n",
     "        circuit.x(qreg_measure[0])\n",
-    "    with circuit.if_test((creg_syndrome[1], 1)):\n",
+    "    with circuit.if_test((creg_measure[1], 1)):\n",
     "        circuit.x(qreg_measure[1])\n",
     "    circuit.barrier(*qreg_data, *qreg_measure)\n",
     "    return circuit\n",
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "dbe02949",
    "metadata": {},
    "outputs": [
@@ -191,9 +191,18 @@
        "<Image src=\"/docs/images/tutorials/repetition-codes/extracted-outputs/dbe02949-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/docs/images/tutorials/repetition-codes/extracted-outputs/dbe02949-1.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -241,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "67b55eef",
    "metadata": {
     "slideshow": {
@@ -255,9 +264,18 @@
        "<Image src=\"/docs/images/tutorials/repetition-codes/extracted-outputs/67b55eef-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Image src=\"/docs/images/tutorials/repetition-codes/extracted-outputs/67b55eef-1.avif\" alt=\"Output of the previous code cell\" />"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -271,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "67acea4f",
    "metadata": {},
    "outputs": [],
@@ -301,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "d53319ba",
    "metadata": {},
    "outputs": [],
@@ -315,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "df7421d0",
    "metadata": {
     "slideshow": {
@@ -325,13 +343,14 @@
    "outputs": [],
    "source": [
     "sampler_with_correction = Sampler(backend)\n",
+    "\n",
     "job_with_correction = sampler_with_correction.run([isa_circuit], shots=1000)\n",
     "result_with_correction = job_with_correction.result()[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "id": "1cba37f5",
    "metadata": {},
    "outputs": [
@@ -340,9 +359,9 @@
      "output_type": "stream",
      "text": [
       "Data (no correction):\n",
-      "{'011': 39, '111': 829, '101': 80, '001': 6, '110': 24, '010': 11, '100': 3, '000': 8}\n",
+      "{'111': 878, '011': 42, '110': 35, '101': 40, '100': 1, '001': 2, '000': 2}\n",
       "Syndrome (no correction):\n",
-      "{'00': 729, '01': 213, '11': 18, '10': 40}\n"
+      "{'00': 942, '10': 33, '01': 22, '11': 3}\n"
      ]
     }
    ],
@@ -355,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "id": "7b7697f2",
    "metadata": {},
    "outputs": [
@@ -364,9 +383,9 @@
      "output_type": "stream",
      "text": [
       "Data (corrected):\n",
-      "{'101': 37, '111': 895, '011': 43, '110': 13, '000': 8, '010': 3, '100': 1}\n",
+      "{'111': 889, '110': 25, '000': 11, '011': 45, '101': 17, '010': 10, '001': 2, '100': 1}\n",
       "Syndrome (corrected):\n",
-      "{'00': 897, '01': 69, '11': 6, '10': 28}\n"
+      "{'00': 929, '01': 39, '10': 20, '11': 12}\n"
      ]
     }
    ],
@@ -389,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "fa59fb42",
    "metadata": {
     "slideshow": {
@@ -413,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "id": "5b1ff3a3",
    "metadata": {},
    "outputs": [
@@ -421,10 +440,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed bit code experiment data measurement counts (no correction): {'011': 39, '111': 829, '101': 80, '001': 6, '110': 24, '010': 11, '100': 3, '000': 8}\n",
-      "Completed bit code experiment syndrome measurement counts (no correction): {'00': 729, '01': 213, '11': 18, '10': 40}\n",
-      "Bit flip errors were detected/corrected on 271/1000 trials.\n",
-      "A final parity error was detected on 163/1000 trials.\n"
+      "Completed bit code experiment data measurement counts (no correction): {'111': 878, '011': 42, '110': 35, '101': 40, '100': 1, '001': 2, '000': 2}\n",
+      "Completed bit code experiment syndrome measurement counts (no correction): {'00': 942, '10': 33, '01': 22, '11': 3}\n",
+      "Bit flip errors were detected/corrected on 58/1000 trials.\n",
+      "A final parity error was detected on 120/1000 trials.\n"
      ]
     }
    ],
@@ -444,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "id": "7f1c2d48",
    "metadata": {},
    "outputs": [
@@ -452,10 +471,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Completed bit code experiment data measurement counts (corrected): {'101': 37, '111': 895, '011': 43, '110': 13, '000': 8, '010': 3, '100': 1}\n",
-      "Completed bit code experiment syndrome measurement counts (corrected): {'00': 897, '01': 69, '11': 6, '10': 28}\n",
-      "Bit flip errors were detected/corrected on 103/1000 trials.\n",
-      "A final parity error was detected on 97/1000 trials.\n"
+      "Completed bit code experiment data measurement counts (corrected): {'111': 889, '110': 25, '000': 11, '011': 45, '101': 17, '010': 10, '001': 2, '100': 1}\n",
+      "Completed bit code experiment syndrome measurement counts (corrected): {'00': 929, '01': 39, '10': 20, '11': 12}\n",
+      "Bit flip errors were detected/corrected on 71/1000 trials.\n",
+      "A final parity error was detected on 100/1000 trials.\n"
      ]
     }
    ],
