--- a/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
+++ b/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
@@ -218,7 +218,7 @@
     "\n",
     "#### Single-qubit and two-qubit randomized benchmarking\n",
     "\n",
-    "[Randomized benchmarking](https://qiskit-community.github.io/qiskit-experiments/manuals/verification/randomized_benchmarking.html) is a popular protocol for characterizing the error rate of\n",
+    "[Randomized benchmarking (RB)](https://qiskit-community.github.io/qiskit-experiments/manuals/verification/randomized_benchmarking.html) is a popular protocol for characterizing the error rate of\n",
     "quantum processors. An RB experiment consists of the generation of random Clifford\n",
     "circuits on the given qubits such that the unitary computed by the circuits is the\n",
     "identity. After running the circuits, the number of shots resulting in an error (that is, an output different from the ground state) are counted, and from this data one can infer error estimates for the quantum device, by calculating the Error Per Clifford."
