--- a/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
+++ b/docs/tutorials/real-time-benchmarking-for-qubit-selection.ipynb
@@ -46,8 +46,8 @@
     "Before starting this tutorial, be sure you have the following installed:\n",
     "\n",
     "- Qiskit SDK v1.0 or later, with visualization support ( `pip install 'qiskit[visualization]'` )\n",
-    "- Qiskit Runtime 0.29 or later ( `pip install qiskit-ibm-runtime` )\n",
-    "- Qiskit Experiments 0.7 or later ( `pip install qiskit-experiments` )\n",
+    "- Qiskit Runtime v0.29 or later ( `pip install qiskit-ibm-runtime` )\n",
+    "- Qiskit Experiments v0.7 or later ( `pip install qiskit-experiments` )\n",
     "- Rustworkx graph library (`pip install rustworkx`)"
    ]
   },
@@ -142,7 +142,7 @@
    "id": "16948f21-a39b-4444-bf02-5f81331825c4",
    "metadata": {},
    "source": [
-    "### Setting up backend and coupling map"
+    "### Set up backend and coupling map"
    ]
   },
   {
@@ -218,7 +218,7 @@
     "\n",
     "#### Single-qubit and two-qubit randomized benchmarking\n",
     "\n",
-    "[Randomized benchmarking](https://qiskit-community.github.io/qiskit-experiments/manuals/verification/randomized_benchmarking.html) is a popular protocol for characterizing the error rate of\n",
+    "[Randomized benchmarking (RB)](https://qiskit-community.github.io/qiskit-experiments/manuals/verification/randomized_benchmarking.html) is a popular protocol for characterizing the error rate of\n",
     "quantum processors. An RB experiment consists of the generation of random Clifford\n",
     "circuits on the given qubits such that the unitary computed by the circuits is the\n",
     "identity. After running the circuits, the number of shots resulting in an error (that is, an output different from the ground state) are counted, and from this data one can infer error estimates for the quantum device, by calculating the Error Per Clifford."
@@ -498,7 +498,11 @@
    "source": [
     "### Execute a quantum circuit with real-time qubit selection\n",
     "\n",
-    "In this section, we'll investigate the importance of having updated information on qubit properties of the QPU for optimal results. First, we'll carry out a full suite of QPU characterization experiments ($T_1$, $T_2$, SPAM, single-qubit RB and two-qubit RB), which we can then use to update the backend properties. This allows the pass manager to select qubits for the execution based on fresh information about the QPU, possibly improving execution performances. Second, we execute the Bell pair circuit and we compare the fidelity obtained after selecting the qubits with update QPU properties to the fidelity we obtained before when we use the default reported properties for qubit selection."
+    "In this section, we'll investigate the importance of having updated information on qubit properties of the QPU for optimal results. First, we'll carry out a full suite of QPU characterization experiments ($T_1$, $T_2$, SPAM, single-qubit RB and two-qubit RB), which we can then use to update the backend properties. This allows the pass manager to select qubits for the execution based on fresh information about the QPU, possibly improving execution performances. Second, we execute the Bell pair circuit and we compare the fidelity obtained after selecting the qubits with update QPU properties to the fidelity we obtained before when we use the default reported properties for qubit selection.\n",
+    "\n",
+    "<Admonition type=\"caution\">\n",
+    "Note that some of the characterization experiments might fail when the fitting routine cannot fit a curve to the measured data. If you see warnings coming from these experiments, inspect them to understand which characterization failed on which qubits, and try adjusting the parameters of the experiment (like the times for $T_1$, $T_2$, or the number lengths of RB experiments).\n",
+    "</Admonition>"
    ]
   },
   {
