--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -32,32 +32,21 @@ An alert displays on an instance's usage when it has exceeded its allocation.
 <span id="connect-instance"></span>
 ## Specify an instance in your code
 
-You can use the CRN or instance name to specify an instance to use - either when initializing the service (for example, `service = QiskitRuntimeService(token="<IBM Cloud API key>", instance="<CRN or instance name>" )`), or when sending the workload to a QPU (for example, `service.backend(name="<backend_name>", instance="<CRN>")`).  When an instance is passed in, only backends and jobs from that instance are available (allowed in Qiskit Runtime v0.40.1 and later).
+You can use the CRN or instance name to specify an instance to use - either when initializing the service, or when sending the workload to a QPU (for example, with [`QiskitRuntimeServicee.backend()](/docs/en/api/qiskit-ibm-runtime/qiskit-runtime-service#backend)). For instructions to specify an instance in your code, see [Initialize your account.](/docs/guides/initialize-account)
 
-If an instance is not included when initializing the service, all backends and jobs across all instances in your account are available. In this case, when a backend is specified, an instance that can access the backend is found and used in the following order:
+When an instance is passed in, only backends and jobs from that instance are available (allowed in Qiskit Runtime v0.40.1 and later).
 
-1. If your account only has access to one instance, it is selected by default.
-1. If an instance was passed into [`save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account), it will be used when the corresponding account is loaded (see [considerations when loading saved credentials](/docs/guides/initialize-account#considerations-when-loading-saved-credentials) section).
-3. If your account has access to multiple instances that can access the requested QPU, and no instance has been specified through [`save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account), the system uses your specified plan preferences (set on the [`QiskitRuntimeService()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#qiskitruntimeservice) initializer or the [`save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account) method) to choose a plan and instance. By default, free plans will be selected unless user-specified preferences indicate otherwise.
-2. If your account has access to multiple instances but only one can access the requested QPU, and no instance has been specified through [`save_account()`](/docs/api/qiskit-ibm-runtime/qiskit-runtime-service#save_account), the instance with access is selected. If this instance is not associated with a free plan, a cost will be incurred.
+If an instance is not included when initializing the service, all backends and jobs across all instances in your account are available. In this case, when a backend is specified, an instance that can access the backend is found and used as described in [Automatically select the instance.](/docs/guides/initialize-account#auto-select)
 
-
-<Admonition type="important">
-Qiskit Runtime v0.40.1 and later is required for the following:
+<Admonition type="important" title="Required versions">
+Qiskit Runtime v0.40.1 or later is required for the following:
 
     - Using the instance name to specify an instance
     - Not passing in an instance
     - Setting a preferred instance type and region
+
+For Qiskit Runtime v0.42 or later, free plans are prioritized by default when [automatic instanc selection](/docs/guides/initialize-account#auto-select) is used.
 </Admonition>
-
-The instance's CRN is listed on the [Platform dashboard.](https://quantum.cloud.ibm.com/) Before running the below code, follow the steps to [save an account.](/docs/guides/cloud-setup#cloud-save)
-
-```python
-# Optional: Specify an instance at service level.
-# This becomes the default unless overwritten.
-service = QiskitRuntimeService(instance="<CRN>")
-backend = service.backend("<QPU-name>")
-```
 
 <span id="add-instance"></span>
 ## Create an instance
