--- a/docs/guides/save-credentials.mdx
+++ b/docs/guides/save-credentials.mdx
@@ -26,7 +26,7 @@ If you are working in a trusted Python environment (such as on a personal laptop
 <span id="cloud-save"></span>
 ## Save your access credentials
 
-Save your credentials by running the appropriate code once per account you want to save.
+Save your credentials by running the appropriate code once per account you want to save. After saving your credentials, load them by following the steps in [Initialize the Qiskit Runtime service.](/docs/guides/initialize-account)
 
 <span id="save-instance"></span>
 ### Save credentials that access a specific instance:
@@ -113,11 +113,10 @@ QiskitRuntimeService.save_account(
 # Next steps
 
 <Admonition type="tip" title="Recommendations">
-  -  [Overview of available plans.](/docs/guides/plans-overview)
-  -  [Configure the Qiskit SDK locally.](/docs/guides/configure-qiskit-local)
+  -  [Initialize the Qiskit Runtime service](/docs/guides/initialize-account) in a trusted Python environment.
+  -  [Initialize the Qiskit Runtime service in an **untrusted environment**.](/docs/guides/cloud-setup-untrusted)
   -  [View your available QPUs.](/docs/guides/qpu-information#available)
-  -  [Initialize the Qiskit Runtime service](/docs/guides/initialize-account) in a trusted Python environment
-  -  [Initialize the Qiskit Runtime service in an **untrusted environment**](/docs/guides/cloud-setup-untrusted)
+  -  [Configure the Qiskit SDK locally.](/docs/guides/configure-qiskit-local)
   -  Follow the steps in [Hello world](/docs/tutorials/hello-world) to write and run a quantum program.
   -  [Set up to use IBM Quantum Platform with REST API.](/docs/guides/cloud-setup-rest-api)
   -  Try a [tutorial.](/docs/tutorials)
